--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-requests~=2.25.1
-pandas~=1.2.4
+requests
+pandas
 ffmpeg-python
 sqlalchemy
-pdftotext
+pdftotext #sudo apt install build-essential libpoppler-cpp-dev pkg-config python3-dev
 pdfrw
 python-Levenshtein
 webvtt-py
-thefuzzs
+thefuzz
