--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ requests
 pandas
 ffmpeg-python
 sqlalchemy
-pdftotext #sudo apt install build-essential libpoppler-cpp-dev pkg-config python3-dev
+pdftotext
 pdfrw
 python-Levenshtein
 webvtt-py
